--- a/style.css
+++ b/style.css
@@ -306,17 +306,56 @@ button#hideLocation:hover {
     right:0;
 }
 
-#mapLabel {
-    width: 245px;
+button#mapLabel {
+    border: none;
+    width: 250px;
     text-align: left;
     height: 24px;
     font-size: 20px;
-    position: absolute;
+    position: fixed;
     background-color: white;
-    bottom:147px;
+    bottom:150px;
     right:0px;
     padding-left: 5px;
     padding-top: 3px;
     padding-bottom: -4px;
     font-family: "Metropolis ExtraBold";
+}
+
+img#mapKey {
+    border: none;
+    width: 250px;
+    text-align: left;
+    height: 24px;
+    font-size: 20px;
+    position: fixed;
+    background-color: white;
+    bottom:150px;
+    right:0px;
+    padding-left: 5px;
+    padding-top: 3px;
+    padding-bottom: -4px;
+    font-family: "Metropolis ExtraBold";
+}
+
+button#mapLabel:hover {
+    background-color: rgb(160, 160, 160);
+}
+
+button#mapReturn {
+    border: none;
+    text-align: left;
+    font-size: 20px;
+    position: fixed;
+    background-color: white;
+    padding-left: 5px;
+    padding-top: 3px;
+    padding-bottom: -4px;
+    font-family: "Metropolis ExtraBold";
+    z-index: 99999;
+    display: none;
+}
+
+button#mapReturn:hover {
+    background-color: rgb(160, 160, 160);
 }
