--- a/style.css
+++ b/style.css
@@ -361,3 +361,103 @@ button#mapReturn {
 button#mapReturn:hover {
     background-color: rgb(160, 160, 160);
 }
+
+div#eventText {
+    border-radius: 10px 10px 0 0;
+    z-index: 9998;
+    background-color: rgba(255, 255, 255, 0);
+    text-align: center;
+    font-size: 50px;
+    text-shadow: 2px 2px 5px black;
+}
+
+div#alertContainer {
+    position: absolute;
+    top: 70px;
+    left: 20px;
+    z-index: 9998;
+    color: white;
+    font-family: 'Bebas Neue';
+    width: 550px;
+    text-align: center;
+    filter: drop-shadow(0 0 2px black);
+}
+
+button#alertDropdown {
+    border: none;
+    background-color: white;
+    color: black;
+    text-align: center;
+    height: 23px;
+    width: 550px;
+    display: none;
+    border-radius: 0 0 10px 10px;
+}
+
+button#alertDropdown:hover {
+    border: none;
+    background-color: rgb(211, 211, 211);
+    color: black;
+    text-align: center;
+    height: 23px;
+    width: 550px;
+}
+
+div#detailsForPolygon {
+    padding-top: 5px;
+    padding-bottom: 5px;
+    z-index: 9998;
+    background-color: black;
+    color: white;
+    font-size: 25px;
+    font-family: 'Bebas Neue';
+    text-align: center;
+    display: none;
+}
+
+div#description {
+    padding-top: 5px;
+    padding-bottom: 5px;
+    z-index: 9998;
+    background-color: black;
+    color: white;
+    font-size: 20px;
+    font-family:monospace;
+    text-align: left;
+    max-height: 550px;
+    overflow: auto;
+    display: none;
+}
+
+div#options {
+    position: absolute;
+    background-color: gray;
+    text-align: center;
+    font-size: 75px;
+    z-index: 9998;
+    border-radius: 20px;
+    width: 750px;
+    height: 100px;
+    left: 0;
+    right: 0;
+    margin-left: auto;
+    margin-right: auto;
+    bottom: 30px;
+}
+
+button#closeAlert {
+    font-size: 25px;
+    text-align: left;
+    border: none;
+    color: #ffffffa6;
+    width: 20px;
+    height: 30px;
+    background-color: transparent;
+    position: absolute;
+    left: -2px;
+    display: none;
+}
+
+button#closeAlert:hover {
+    color: #ffffffff;
+}
